# tellemshift

./: CMakeLists.txt  CMakePresets.json  README.md
dat/: glbl.map
dat_src/: global_map.json
dat_src/graphics/: fragmentShader.glsl  map.json  vertexShader.glsl
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
msfl/: README.md
msfl/arm64/dynamic/: libmsfl.dylib
msfl/include/: ByteStream.hpp  Date.hpp  FilePath.hpp  FileWriter.h  RawBytes.hpp  asset.hpp  balloon.hpp  bitmap.hpp  bitmapRender.hpp  cfgParse.hpp  jparse.hpp  msfl.hpp  msutil.hpp  pak.hpp  ptrconverter.hpp  ttf.hpp  ttfRender.hpp  xml.hpp
msfl/win64/dynamic/: msfl.lib
msfl/win64/static/: msfl.lib
src/: ErrorHandle.cpp  ErrorHandle.hpp  Shader.cpp  Shader.hpp  assetManager.cpp  assetManager.hpp  fps.cpp  fps.hpp  graphics.cpp  graphics.hpp  main.cpp  mat.hpp  path.cpp  path.hpp  png.cpp  png.hpp  settings.hpp  texture.cpp  texture.hpp  util.hpp  vec.hpp  window.cpp  window.hpp
